--- a/01-social-links-profile-main/index.html
+++ b/01-social-links-profile-main/index.html
@@ -11,10 +11,10 @@
 
 <body class="bg-black h-dvh flex items-center">
 
-  <div class="w-8/10 mx-auto p-12 bg-gray-800 flex flex-col items-center gap-3 max-w-md rounded-2xl">
+  <div class="w-8/10 mx-auto p-12 bg-gray-800 flex flex-col items-center gap-3 max-w-md rounded-2xl min-w-96">
 
     <figure class="size-28">
-      <img class="w-full rounded-full" src="/01-social-links-profile-main/assets/images/avatar-jessica.jpeg" alt="avatar">
+      <img class="w-full rounded-full" src="assets/images/avatar-jessica.jpeg" alt="avatar">
     </figure>
   
     <h2 class="text-white text-3xl">Jessica Randall</h2>
