--- a/03-fylo-data-storage-component-master/index.html
+++ b/03-fylo-data-storage-component-master/index.html
@@ -10,7 +10,7 @@
   <title>Frontend Mentor | Fylo data storage component</title>
 </head>
 <body>
-  <div class="bg-[url(./images/bg-mobile.png)] sm:bg-[url(./images/bg-desktop.png)] bg-no-repeat bg-cover bg-bottom h-dvh flex flex-col md:flex-row justify-center items-end md:items-center min-w-full gap-4 md:gap-8 p-6">
+  <div class="bg-[url(/images/bg-mobile.png)] sm:bg-[url(/images/bg-desktop.png)] bg-no-repeat bg-cover bg-bottom h-dvh flex flex-col md:flex-row justify-center items-end md:items-center min-w-full gap-4 md:gap-8 p-6">
     <div class="flex flex-col md:flex-row justify-center items-center md:items-end min-w-full gap-4 md:gap-8 p-6">   
       <section class="bg-Blue-850 p-12 rounded-xl rounded-tr-[110px] flex flex-col gap-10 max-h-[220px] w-[87%] max-w-[350px] md:h-[200px] shadow-lg">
         <figure class="w-[56%]">
